fix: wrap code blocks to remove need for horizontal scroll on mobile

--- a/src/templates/BlogPost/BlogPost.module.css
+++ b/src/templates/BlogPost/BlogPost.module.css
@@ -1,6 +1,8 @@
 code {
   padding: 0;
   font-size: 0.8rem;
+  white-space: pre-wrap !important;
+  word-wrap: break-word !important;
 }
 
 blockquote {
